@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 
 import io.netty.buffer.PooledByteBufAllocator;
 import org.apache.commons.logging.Log;
@@ -76,18 +75,26 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
 
 
 	/**
-	 * Checks whether all of the data buffers allocated by this factory have also been released.
+	 * Checks whether all the data buffers allocated by this factory have also been released.
 	 * If not, then an {@link AssertionError} is thrown. Typically used from a JUnit <em>after</em>
 	 * method.
 	 */
 	public void checkForLeaks() {
+		checkForLeaks(Duration.ofSeconds(0));
+	}
+
+	/**
+	 * Variant of {@link #checkForLeaks()} with the option to wait for buffer release.
+	 * @param timeout how long to wait for buffers to be released; 0 for no waiting
+	 */
+	public void checkForLeaks(Duration timeout) {
 		this.trackCreated.set(false);
 		Instant start = Instant.now();
 		while (true) {
 			if (this.created.stream().noneMatch(LeakAwareDataBuffer::isAllocated)) {
 				return;
 			}
-			if (Instant.now().isBefore(start.plus(Duration.ofSeconds(5)))) {
+			if (Instant.now().isBefore(start.plus(timeout))) {
 				try {
 					Thread.sleep(50);
 				}
@@ -99,7 +106,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
 			List<AssertionError> errors = this.created.stream()
 					.filter(LeakAwareDataBuffer::isAllocated)
 					.map(LeakAwareDataBuffer::leakError)
-					.collect(Collectors.toList());
+					.toList();
 
 			errors.forEach(it -> logger.error("Leaked error: ", it));
 			throw new AssertionError(errors.size() + " buffer leaks detected (see logs above)");
@@ -107,6 +114,7 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
 	}
 
 	@Override
+	@Deprecated
 	public DataBuffer allocateBuffer() {
 		return createLeakAwareDataBuffer(this.delegate.allocateBuffer());
 	}
@@ -139,8 +147,13 @@ public class LeakAwareDataBufferFactory implements DataBufferFactory {
 		// Remove LeakAwareDataBuffer wrapper so delegate can find native buffers
 		dataBuffers = dataBuffers.stream()
 				.map(o -> o instanceof LeakAwareDataBuffer ? ((LeakAwareDataBuffer) o).dataBuffer() : o)
-				.collect(Collectors.toList());
+				.toList();
 		return new LeakAwareDataBuffer(this.delegate.join(dataBuffers), this);
+	}
+
+	@Override
+	public boolean isDirect() {
+		return this.delegate.isDirect();
 	}
 
 }
