@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,16 +16,27 @@
 
 package org.springframework.test.context.cache;
 
+import java.util.List;
+
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import org.springframework.context.ApplicationContext;
+import org.springframework.context.ApplicationContextInitializer;
+import org.springframework.context.ConfigurableApplicationContext;
+import org.springframework.context.support.GenericApplicationContext;
 import org.springframework.lang.Nullable;
 import org.springframework.test.annotation.DirtiesContext.HierarchyMode;
+import org.springframework.test.context.ApplicationContextFailureProcessor;
 import org.springframework.test.context.CacheAwareContextLoaderDelegate;
+import org.springframework.test.context.ContextLoadException;
 import org.springframework.test.context.ContextLoader;
 import org.springframework.test.context.MergedContextConfiguration;
 import org.springframework.test.context.SmartContextLoader;
+import org.springframework.test.context.aot.AotContextLoader;
+import org.springframework.test.context.aot.AotTestContextInitializers;
+import org.springframework.test.context.aot.TestContextAotException;
+import org.springframework.test.context.util.TestContextSpringFactoriesUtils;
 import org.springframework.util.Assert;
 
 /**
@@ -36,6 +47,11 @@ import org.springframework.util.Assert;
  * invoke the {@link #DefaultCacheAwareContextLoaderDelegate(ContextCache)}
  * and provide a custom {@link ContextCache} implementation.
  *
+ * <p>As of Spring Framework 6.0, this class loads {@link ApplicationContextFailureProcessor}
+ * implementations via the {@link org.springframework.core.io.support.SpringFactoriesLoader
+ * SpringFactoriesLoader} mechanism and delegates to them in
+ * {@link #loadContext(MergedContextConfiguration)} to process context load failures.
+ *
  * @author Sam Brannen
  * @since 4.1
  */
@@ -43,10 +59,16 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 
 	private static final Log logger = LogFactory.getLog(DefaultCacheAwareContextLoaderDelegate.class);
 
+
 	/**
 	 * Default static cache of Spring application contexts.
 	 */
 	static final ContextCache defaultContextCache = new DefaultContextCache();
+
+	private List<ApplicationContextFailureProcessor> contextFailureProcessors = TestContextSpringFactoriesUtils
+			.loadFactoryImplementations(ApplicationContextFailureProcessor.class);
+
+	private final AotTestContextInitializers aotTestContextInitializers = new AotTestContextInitializers();
 
 	private final ContextCache contextCache;
 
@@ -73,67 +95,56 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 		this.contextCache = contextCache;
 	}
 
-	/**
-	 * Get the {@link ContextCache} used by this context loader delegate.
-	 */
-	protected ContextCache getContextCache() {
-		return this.contextCache;
-	}
-
-	/**
-	 * Load the {@code ApplicationContext} for the supplied merged context configuration.
-	 * <p>Supports both the {@link SmartContextLoader} and {@link ContextLoader} SPIs.
-	 * @throws Exception if an error occurs while loading the application context
-	 */
-	protected ApplicationContext loadContextInternal(MergedContextConfiguration mergedContextConfiguration)
-			throws Exception {
-
-		ContextLoader contextLoader = mergedContextConfiguration.getContextLoader();
-		Assert.notNull(contextLoader, "Cannot load an ApplicationContext with a NULL 'contextLoader'. " +
-				"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
-
-		ApplicationContext applicationContext;
-
-		if (contextLoader instanceof SmartContextLoader smartContextLoader) {
-			applicationContext = smartContextLoader.loadContext(mergedContextConfiguration);
-		}
-		else {
-			String[] locations = mergedContextConfiguration.getLocations();
-			Assert.notNull(locations, "Cannot load an ApplicationContext with a NULL 'locations' array. " +
-					"Consider annotating your test class with @ContextConfiguration or @ContextHierarchy.");
-			applicationContext = contextLoader.loadContext(locations);
-		}
-
-		return applicationContext;
-	}
 
 	@Override
 	public boolean isContextLoaded(MergedContextConfiguration mergedContextConfiguration) {
 		synchronized (this.contextCache) {
-			return this.contextCache.contains(mergedContextConfiguration);
+			return this.contextCache.contains(replaceIfNecessary(mergedContextConfiguration));
 		}
 	}
 
 	@Override
 	public ApplicationContext loadContext(MergedContextConfiguration mergedContextConfiguration) {
+		mergedContextConfiguration = replaceIfNecessary(mergedContextConfiguration);
 		synchronized (this.contextCache) {
 			ApplicationContext context = this.contextCache.get(mergedContextConfiguration);
 			if (context == null) {
 				try {
-					context = loadContextInternal(mergedContextConfiguration);
-					if (logger.isDebugEnabled()) {
-						logger.debug(String.format("Storing ApplicationContext [%s] in cache under key [%s]",
+					if (mergedContextConfiguration instanceof AotMergedContextConfiguration aotMergedConfig) {
+						context = loadContextInAotMode(aotMergedConfig);
+					}
+					else {
+						context = loadContextInternal(mergedContextConfiguration);
+					}
+					if (logger.isTraceEnabled()) {
+						logger.trace("Storing ApplicationContext [%s] in cache under key %s".formatted(
 								System.identityHashCode(context), mergedContextConfiguration));
 					}
 					this.contextCache.put(mergedContextConfiguration, context);
 				}
 				catch (Exception ex) {
-					throw new IllegalStateException("Failed to load ApplicationContext", ex);
+					Throwable cause = ex;
+					if (ex instanceof ContextLoadException cle) {
+						cause = cle.getCause();
+						for (ApplicationContextFailureProcessor contextFailureProcessor : this.contextFailureProcessors) {
+							try {
+								contextFailureProcessor.processLoadFailure(cle.getApplicationContext(), cause);
+							}
+							catch (Throwable throwable) {
+								if (logger.isDebugEnabled()) {
+									logger.debug("Ignoring exception thrown from ApplicationContextFailureProcessor [%s]: %s"
+											.formatted(contextFailureProcessor, throwable));
+								}
+							}
+						}
+					}
+					throw new IllegalStateException(
+						"Failed to load ApplicationContext for " + mergedContextConfiguration, cause);
 				}
 			}
 			else {
-				if (logger.isDebugEnabled()) {
-					logger.debug(String.format("Retrieved ApplicationContext [%s] from cache with key [%s]",
+				if (logger.isTraceEnabled()) {
+					logger.trace("Retrieved ApplicationContext [%s] from cache with key %s".formatted(
 							System.identityHashCode(context), mergedContextConfiguration));
 				}
 			}
@@ -147,8 +158,98 @@ public class DefaultCacheAwareContextLoaderDelegate implements CacheAwareContext
 	@Override
 	public void closeContext(MergedContextConfiguration mergedContextConfiguration, @Nullable HierarchyMode hierarchyMode) {
 		synchronized (this.contextCache) {
-			this.contextCache.remove(mergedContextConfiguration, hierarchyMode);
+			this.contextCache.remove(replaceIfNecessary(mergedContextConfiguration), hierarchyMode);
 		}
+	}
+
+	/**
+	 * Get the {@link ContextCache} used by this context loader delegate.
+	 */
+	protected ContextCache getContextCache() {
+		return this.contextCache;
+	}
+
+	/**
+	 * Load the {@code ApplicationContext} for the supplied merged context configuration.
+	 * <p>Supports both the {@link SmartContextLoader} and {@link ContextLoader} SPIs.
+	 * @throws Exception if an error occurs while loading the application context
+	 */
+	@SuppressWarnings("deprecation")
+	protected ApplicationContext loadContextInternal(MergedContextConfiguration mergedContextConfiguration)
+			throws Exception {
+
+		ContextLoader contextLoader = getContextLoader(mergedContextConfiguration);
+		if (contextLoader instanceof SmartContextLoader smartContextLoader) {
+			return smartContextLoader.loadContext(mergedContextConfiguration);
+		}
+		else {
+			String[] locations = mergedContextConfiguration.getLocations();
+			Assert.notNull(locations, () -> """
+					Cannot load an ApplicationContext with a NULL 'locations' array. \
+					Consider annotating test class [%s] with @ContextConfiguration or \
+					@ContextHierarchy.""".formatted(mergedContextConfiguration.getTestClass().getName()));
+			return contextLoader.loadContext(locations);
+		}
+	}
+
+	protected ApplicationContext loadContextInAotMode(AotMergedContextConfiguration aotMergedConfig) throws Exception {
+		Class<?> testClass = aotMergedConfig.getTestClass();
+		ApplicationContextInitializer<ConfigurableApplicationContext> contextInitializer =
+				this.aotTestContextInitializers.getContextInitializer(testClass);
+		Assert.state(contextInitializer != null,
+				() -> "Failed to load AOT ApplicationContextInitializer for test class [%s]"
+						.formatted(testClass.getName()));
+		ContextLoader contextLoader = getContextLoader(aotMergedConfig);
+
+		if (logger.isTraceEnabled()) {
+			logger.trace("Loading ApplicationContext for AOT runtime for " + aotMergedConfig.getOriginal());
+		}
+		else if (logger.isDebugEnabled()) {
+			logger.debug("Loading ApplicationContext for AOT runtime for test class " +
+					aotMergedConfig.getTestClass().getName());
+		}
+
+		if (!((contextLoader instanceof AotContextLoader aotContextLoader) &&
+				(aotContextLoader.loadContextForAotRuntime(aotMergedConfig.getOriginal(), contextInitializer)
+						instanceof GenericApplicationContext gac))) {
+			throw new TestContextAotException("""
+					Cannot load ApplicationContext for AOT runtime for %s. The configured \
+					ContextLoader [%s] must be an AotContextLoader and must create a \
+					GenericApplicationContext."""
+						.formatted(aotMergedConfig.getOriginal(), contextLoader.getClass().getName()));
+		}
+		gac.registerShutdownHook();
+		return gac;
+	}
+
+	private ContextLoader getContextLoader(MergedContextConfiguration mergedConfig) {
+		ContextLoader contextLoader = mergedConfig.getContextLoader();
+		Assert.notNull(contextLoader, () -> """
+				Cannot load an ApplicationContext with a NULL 'contextLoader'. \
+				Consider annotating test class [%s] with @ContextConfiguration or \
+				@ContextHierarchy.""".formatted(mergedConfig.getTestClass().getName()));
+		return contextLoader;
+	}
+
+	/**
+	 * If the test class associated with the supplied {@link MergedContextConfiguration}
+	 * has an AOT-optimized {@link ApplicationContext}, this method will create an
+	 * {@link AotMergedContextConfiguration} to replace the provided {@code MergedContextConfiguration}.
+	 * <p>Otherwise, this method simply returns the supplied {@code MergedContextConfiguration}
+	 * unmodified.
+	 * <p>This allows for transparent {@link org.springframework.test.context.cache.ContextCache ContextCache}
+	 * support for AOT-optimized application contexts.
+	 * @since 6.0
+	 */
+	@SuppressWarnings("unchecked")
+	private MergedContextConfiguration replaceIfNecessary(MergedContextConfiguration mergedConfig) {
+		Class<?> testClass = mergedConfig.getTestClass();
+		if (this.aotTestContextInitializers.isSupportedTestClass(testClass)) {
+			Class<? extends ApplicationContextInitializer<?>> contextInitializerClass =
+					this.aotTestContextInitializers.getContextInitializerClass(testClass);
+			return new AotMergedContextConfiguration(testClass, contextInitializerClass, mergedConfig, this);
+		}
+		return mergedConfig;
 	}
 
 }
